<resources>
    <string name="app_name">TabLayoutExample</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_app">Application Manager</string>

    <string name="all">ALL</string>
    <string name="download">DOWNLOADED</string>
    <string name="run">RUNNING</string>

    <!-- list app labels  -->
    <string name="delete">Delete</string>
    <string name="action_name_sort">Sort by Name</string>
    <string name="action_size_sort">Sort by Size</string>
    <string name="action_date_sort">Sort by Date</string>
    <string name="action_check_updates">Check for Updates</string>
    <string name="search_hint">Search Places..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
