<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search / will display always -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_action"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"/>

    <!-- Sort by size -->
    <item android:id="@+id/action_name_sort"
        android:title="@string/action_name_sort"
        app:showAsAction="never"/>

    <!-- Sort by size -->
    <item android:id="@+id/action_size_sort"
        android:title="@string/action_size_sort"
        app:showAsAction="never"/>

    <!-- Sort by date -->
    <item android:id="@+id/action_date_sort"
        android:title="@string/action_date_sort"
        app:showAsAction="never"/>

    <!-- Check updates -->
    <item android:id="@+id/action_check_updates"
        android:title="@string/action_check_updates"
        app:showAsAction="never" />
</menu>